# speca-lean4-plugin

./: .gitattributes  .gitignore  README.md  pyproject.toml  theorem_map.json
.github/workflows/: ci.yml  judge-dispatch.yml
data/: anchor_map.json  checker_map.json  ethereum_vulns.csv  ethereum_vulns.meta.json  ethereum_vulns_high.csv  ethereum_vulns_high.meta.json  evidence_seeds.json  findings_map.json  generated_coverage.json  generated_properties.json  label_match_rules.json  recall_gaps.json  solodit_checklist.meta.json
docs/: high-angle-checklist.md  improve-log.md  judge-loop.md  kurtosis-bridge.md  lean-toolchain.md  pipeline.md  spec-annotation.md
lean/: Main.lean  SpecaExport.lean  lakefile.lean
lean/SpecaExport/: Basic.lean
outputs/20260723-gasper/: 01e_PARTIAL_gasper.json  manifest.json
src/speca_lean4/: __init__.py  anchors.py  cli.py  health.py  judge.py  kurtosis.py  mapping.py  precision.py  recall.py  schema.py
tests/: test_anchors.py  test_cli.py  test_honesty.py  test_judge.py  test_kurtosis.py  test_mapping.py  test_precision.py  test_recall.py  test_run_lean.py
tests/fixtures/: bug_bounty_scope.sample.json  mock_llm.py  theorem_health.sample.json
tools/: apply-improved.py  emit-track.sh  generate-properties.py  llm-hermes.sh  run-improve.sh
