[project]
name = "speca-lean4-plugin"
version = "0.1.0"
description = "gasper-lean4 (Lean 4 formal verification) -> SPECA 01e property provider. External plugin for the speca#87 lean seam."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
speca-lean4 = "speca_lean4.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/speca_lean4"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
